syntax = "proto3";

package models;

import "google/protobuf/timestamp.proto";
import "market_data.proto";

option go_package = "AlgorithmicTraderDistributed/common/models/proto/generated";


message MarketDataPacket {
  string current_uuid = 1;
  repeated string transmission_path = 2;
  repeated google.protobuf.Timestamp transmission_timestamps = 3;
  MarketData payload = 4;
}
